tests/corpus/recall/out_of_scope/type_error/main.py
def increment(value):
    return value + "1"
